@@ -20,7 +20,25 @@ SPVM::Document::NativeAPI::Compiler - SPVM Compiler Native APIs
 
 SPVM compiler native APIs are the public APIs to use compile SPVM modules.
 
-=head1 List of Compiler Native APIs
+=head1 IDs of Compiler Native APIs
+
+Compiler native APIs have its IDs.
+
+  0  new_compiler
+  1  free_compiler
+  2  set_start_line
+  3  get_start_line
+  4  set_start_file
+  5  get_start_file
+  6  add_module_dir
+  7  get_module_dirs_length
+  8  get_module_dir
+  9  compile_spvm
+  10 get_error_messages_length
+  11 get_error_message
+  12 create_spvm_32bit_codes
+
+=head1 Compiler Native APIs
 
 =head2 new_compiler
   
@@ -98,4 +116,4 @@ Get a compiler error messages with the index.
 
   int32_t* (*create_spvm_32bit_codes)(void* compiler, void* allocator);
 
-Create SPVM 32bit codes on the memory allocated by the allocator.
+Create SPVM 32bit codes on the memory allocated by the L<allocator|SPVM::Document::NativeAPI::Allocator> and return them.
