@@ -42,6 +42,7 @@ Revision history for SPVM
         * Add SPVM Precompile Native APIs. The document is SPVM::Document::NativeAPI::Precompile.
         * Add SPVM String Buffer Native APIs. The document is SPVM::Document::NativeAPI::StringBuffer.
         * Add SPVM Allocator Native APIs. The document is SPVM::Document::NativeAPI::Allocator.
+        * Improve SPVM::Document::NativeAPI::Compiler.
         
         [BUG FIX]
         * Fix the bug that multi-dimensional array can't assing to any object array "object[]".
